Initial Terraform + GitHub Actions setup

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -25,6 +25,36 @@ jobs:
         with:
           terraform_version: 1.6.0
 
+      - name: Verify AWS secrets are configured
+        run: |
+          echo "Checking AWS secrets accessibility..."
+          
+          # Check if secrets are accessible (without displaying values)
+          ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          
+          if [ -z "$ACCESS_KEY_ID" ]; then
+            echo "❌ Error: AWS_ACCESS_KEY_ID secret is not configured or empty"
+            echo "Please go to Settings > Secrets and variables > Actions"
+            echo "and create a secret named exactly: AWS_ACCESS_KEY_ID"
+            exit 1
+          else
+            ACCESS_KEY_LENGTH=${#ACCESS_KEY_ID}
+            echo "✅ AWS_ACCESS_KEY_ID is configured (length: $ACCESS_KEY_LENGTH characters)"
+          fi
+          
+          if [ -z "$SECRET_ACCESS_KEY" ]; then
+            echo "❌ Error: AWS_SECRET_ACCESS_KEY secret is not configured or empty"
+            echo "Please go to Settings > Secrets and variables > Actions"
+            echo "and create a secret named exactly: AWS_SECRET_ACCESS_KEY"
+            exit 1
+          else
+            SECRET_KEY_LENGTH=${#SECRET_ACCESS_KEY}
+            echo "✅ AWS_SECRET_ACCESS_KEY is configured (length: $SECRET_KEY_LENGTH characters)"
+          fi
+          
+          echo "✅ All AWS secrets are accessible and configured"
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
